FE 부서 근태 조회 (단일/일괄 처리)

--- a/src/main/resources/templates/approval/main.html
+++ b/src/main/resources/templates/approval/main.html
@@ -120,8 +120,8 @@
                                 </thead>
                                 <tbody th:each="doc : ${pendingDocsList}">
                                 <tr class="doc-row">
-                                    <input type="hidden" class="requestId" th:value="${doc.requestId}">
-                                    <td><input type="checkbox" class="rowCheck" th:value="${doc.requestId}"></td>
+                                    <td><input type="hidden" class="requestId" th:value="${doc.requestId}">
+                                        <input type="checkbox" class="rowCheck" th:value="${doc.requestId}"></td>
                                     <td th:text="${doc.requestId}"></td>
                                     <td th:text="${doc.reqEmpCode}"></td>
                                     <td th:text="${doc.reqEmpName}"></td>
