FE 부서 근태 조회 (신청근태상세-유형에따른테이블구조 변경)

--- a/src/main/resources/static/css/emp_att.css
+++ b/src/main/resources/static/css/emp_att.css
@@ -173,6 +173,10 @@ table td {
     background-color: #dbeeff;
     font-weight: 600;
 }
+
+#detail-table th {
+    width: 120px;
+}
 /*******************************************
  * 📦 패널 공통 (우측 상세)
  *******************************************/
