--- a/src/main/resources/templates/approval/detail.html
+++ b/src/main/resources/templates/approval/detail.html
@@ -39,7 +39,7 @@
             <div class="body">
                 <!-- 일반 -->
                 <table class="detail-table"
-                       th:if="${reqInfo.reqType != '반차' and reqInfo.reqType != '조퇴' and reqInfo.reqType != '기타'}">
+                       th:if="${reqInfo.reqType != '반차' and reqInfo.reqType != '조퇴' and reqInfo.reqType != '기타' and reqInfo.reqType != '연차'}">
                     <tr>
                         <th>근무일</th>
                         <td th:text="${reqInfo.startDate}"></td>
@@ -52,18 +52,11 @@
                            + ${#strings.substring(reqInfo.endTime,0,5)}
                            + '(' + ${reqInfo.hours} + '시간)'"></td>
                     </tr>
-
                     <tr>
                         <th>사유</th>
                         <td th:text="${reqInfo.reason}"></td>
-
-                        <th>변경근태</th>
-                        <td th:text="${reqInfo.reqDetailType}"></td>
-                    </tr>
-
-                    <tr>
                         <th>사유내용</th>
-                        <td colspan="3" th:text="${reqInfo.reasonDetail}"></td>
+                        <td th:text="${reqInfo.reasonDetail}"></td>
                     </tr>
                 </table>
 
@@ -82,7 +75,6 @@
                            + ${#strings.substring(reqInfo.endTime,0,5)}
                            + '(' + ${reqInfo.hours} + '시간)'"></td>
                     </tr>
-
                     <tr>
                         <th>사유</th>
                         <td th:text="${reqInfo.reason}"></td>
@@ -90,7 +82,6 @@
                         <th>반차구분</th>
                         <td th:text="${reqInfo.halfType}"></td>
                     </tr>
-
                     <tr>
                         <th>사유내용</th>
                         <td colspan="3" th:text="${reqInfo.reasonDetail}"></td>
@@ -116,7 +107,7 @@
 
                 <!-- 기타 -->
                 <table class="detail-table"
-                       th:if="${reqInfo.reqType == '기타'}">
+                       th:if="${reqInfo.reqType == '기타' || reqInfo.reqType == '연차'}">
                     <tr>
                         <th>대상기간</th>
                         <td th:text="${reqInfo.startDate + ' ~ ' + reqInfo.endDate}"></td>
