--- a/src/main/resources/templates/att/etc.html
+++ b/src/main/resources/templates/att/etc.html
@@ -21,36 +21,34 @@
         <!-- 조회 검색 -->
         <form id="searchForm" th:action="@{/att/etc/search}" method="get" class="search-box">
             <label>근무일
-                <input type="date" name="workDate" id="workDate"
-                       th:value="${#temporals.format(workDate, 'yyyy-MM-dd')}">
-
+                <input type="date" th:field="*{workDate}">
             </label>
 
             <label>사번
-                <input type="text" id="empCode" name="empCode"
-                       th:value="${#authorization.expression('hasRole(''LEADER'')') ? '' : #authentication.name}"
-                       th:readonly="${!#authorization.expression('hasRole(''LEADER'')')}"
-                       placeholder="사번 입력" />
+                <input type="text"
+                       th:field="*{empCode}"
+                       placeholder="사번 입력"
+                       th:readonly="${!#authorization.expression('hasRole(''LEADER'')')}" />
+
             </label>
 
             <label>근무계획
-                <select name="planType">
-                    <option value="" th:selected="${planType == ''}">전체</option>
-                    <option value="05" th:selected="${planType == '05'}">주간</option>
-                    <option value="05-A" th:selected="${planType == '05-A'}">현장실습</option>
-                    <option value="06" th:selected="${planType == '06'}">연차</option>
-                    <option value="10" th:selected="${planType == '10'}">출장</option>
-                    <option value="31" th:selected="${planType == '31'}">4전</option>
-                    <option value="32" th:selected="${planType == '32'}">4후</option>
-                    <option value="33" th:selected="${planType == '33'}">4야</option>
-                    <option value="45" th:selected="${planType == '45'}">3전</option>
-                    <option value="46" th:selected="${planType == '46'}">3후</option>
-                    <option value="61" th:selected="${planType == '61'}">휴직</option>
-                    <option value="64" th:selected="${planType == '64'}">육아휴직</option>
-                    <option value="62" th:selected="${planType == '62'}">사외교육</option>
+                <select th:field="*{planType}">
+                    <option value="">전체</option>
+                    <option value="05">주간</option>
+                    <option value="05-A">현장실습</option>
+                    <option value="06">연차</option>
+                    <option value="10">출장</option>
+                    <option value="31">4전</option>
+                    <option value="32">4후</option>
+                    <option value="33">4야</option>
+                    <option value="45">3전</option>
+                    <option value="46">3후</option>
+                    <option value="61">휴직</option>
+                    <option value="64">육아휴직</option>
+                    <option value="62">사외교육</option>
                 </select>
             </label>
-
 
             <label>부서</label>
             <input type="text" id="deptName" name="deptName"
