FE 부서원 일근태 승인 기능 추가(시작일 고정, 신청시간 자동주입, 기타 드롭메뉴 실시간 반영 등)

--- a/src/main/resources/templates/approval/main.html
+++ b/src/main/resources/templates/approval/main.html
@@ -53,7 +53,7 @@
                                 </select>
                             </label>
 
-                            <label>신청근태
+                            <label id="detailTypeBox">신청근태
                                 <select th:field="*{reqDetailType}">
                                     <option value="">전체</option>
                                     <option value="05">주간</option>
@@ -71,10 +71,11 @@
                                 </select>
                             </label>
 
-                            <label>부서</label>
+                            <label>부서
                             <input type="text" name="department"
                                    th:value="${#authentication.principal.deptCode}"
                                    readonly placeholder="부서명"/>
+                            </label>
                         </div>
                     </form>
                 </div>
