FE 부서원 일근태 승인 기능 추가(시작일 고정, 신청시간 자동주입, 기타 드롭메뉴 실시간 반영 등)

--- a/src/main/resources/templates/deptAttSearch/main.html
+++ b/src/main/resources/templates/deptAttSearch/main.html
@@ -20,7 +20,7 @@
             <!-- 검색 박스 -->
             <div class="search-box">
                 <form th:action="@{/deptAttSearch/main}" method="get"
-                      th:object="${deptAttSearchDto}"class="attform">
+                      th:object="${deptAttSearchDto}" class="attform">
 
                     <div class="search-row">
                         <label>근무일
@@ -55,7 +55,7 @@
                         </label>
 
                         <label>부서
-                            <select th:field="*{deptName}">
+                            <select th:field="*{department}">
                                 <option value="">전체</option>
                                 <option th:each="dept : ${childeDeptList}"
                                         th:value="${dept}"
