일괄 승인, 반려 / 부서 근태 조회 구현 완료, 검색 폼 세션 처리 및 페이지 이동 시 삭제

--- a/src/main/resources/templates/approval/detail.html
+++ b/src/main/resources/templates/approval/detail.html
@@ -160,13 +160,13 @@
             <div class="actions">
                 <!-- 승인 form -->
                 <form th:action="@{/approval/approve}" method="post" style="display:inline-block; margin-right:10px;">
-                    <input type="hidden" name="requestId" th:value="${requestId}">
+                    <input type="hidden" name="requestIds" th:value="${requestId}">
                     <button type="submit" class="btn approval">승인</button>
                 </form>
 
                 <!-- 반려 form -->
                 <form th:action="@{/approval/reject}" method="post" style="display:inline-block;">
-                    <input type="hidden" name="requestId" th:value="${requestId}">
+                    <input type="hidden" name="requestIds" th:value="${requestId}">
                     <label>반려사유</label>
                     <input type="text" name="reason" placeholder="반려 사유 입력" required>
                     <button type="submit" class="btn rejection">반려</button>
