--- a/src/main/resources/templates/myHistory/main.html
+++ b/src/main/resources/templates/myHistory/main.html
@@ -58,7 +58,7 @@
                                 </select>
                             </label>
 
-                            <label>신청근태
+                            <label id="detailTypeBox">신청근태
                                 <select name="reqDetailType">
                                     <option value="">전체</option>
                                     <option value="05">주간</option>
