FE 부서근태 조회 (페이지 전환 버튼 주소 변경)

--- a/src/main/resources/templates/deptAttSearch/main.html
+++ b/src/main/resources/templates/deptAttSearch/main.html
@@ -159,8 +159,8 @@
         form.submit();
     }
 
-    document.getElementById("btnGoGeneral").onclick = () => submitWithAction("/att/general");
-    document.getElementById("btnGoEtc").onclick = () => submitWithAction("/att/etc");
+    document.getElementById("btnGoGeneral").onclick = () => submitWithAction("/att/general/search");
+    document.getElementById("btnGoEtc").onclick = () => submitWithAction("/att/etc/search");
 </script>
 
 </body>
