부서 근태 조회 -로직 구현 일근태 승인 -반려 사유 근태 신청 내역 -검색 폼 유지 기타 근태 -과거 날짜 상신 불가 -연차 처리
-부서관리
리더 변경 시에 기존 리더 권한 해제   완료

--- a/src/main/resources/templates/dept/detail.html
+++ b/src/main/resources/templates/dept/detail.html
@@ -180,6 +180,14 @@
 </main>
 
 <!-- 스크립트 부분 -->
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    const errorMsg = /*[[${message}]]*/ null;
+    if (errorMsg != null) {
+        alert(errorMsg);
+    }
+    /*]]>*/
+</script>
 <script>
     const moveBtn = document.getElementById('moveDeptBtn');
     const moveSelect = document.getElementById('moveDeptSelect');
